--- a/megoldasok.tex
+++ b/megoldasok.tex
@@ -1,11 +1,11 @@
 \chapter{A feladatok megoldásai}
 \subsubsection*{1. feladat}
-\begin{prolog}
+\begin{program}
 foo(X) :- bar(X).
 bar(X) :- baz(X).
-\end{prolog}
+\end{program}
 \subsubsection*{2. feladat}
-\begin{prolog}
+\begin{program}
 foo(X) :- bar(X).
 bar(X) :- baz(X).
-\end{prolog}
+\end{program}
