More explicit sources

--- a/konyv.tex
+++ b/konyv.tex
@@ -11,6 +11,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{enumitem}
 \usepackage{fancyvrb}
 \usepackage[all]{genealogytree}
 \usepackage{imakeidx}
