--- a/konyvajanlo.tex
+++ b/konyvajanlo.tex
@@ -3,28 +3,30 @@ Magyar nyelven nem sok minden jelent meg a Prologról, bár fontos
 megemlíteni a Szeredi Péter által fejlesztett \name{Mprolog}
 (\emph{Modular Prolog}) rendszerről szóló
 könyvet:
-\begin{itemize}
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] Zs.~Farkas, I.~Futó, T.~Langer, P.~Szeredi, \emph{Mprolog
 programozási nyelv}, Műszaki Könyvkiadó, 1989.
 \end{itemize}
-Angolul már sokkal nagyobb a választék. A programozási készség
-elsajátításához a legfontosabb a gyakorlás; rengeteg érdekes feladat
-található (megoldásokkal!) az alábbiakban:
-\begin{itemize}
+Angolul már sokkal nagyobb a választék. Elsőként az Előszóban említett
+két könyvet ajánlanám: az \emph{Art of Prolog} egy mélyebb,
+technikaibb tárgyalása a nyelvnek, míg a Bratko-féle tankönyv számos
+mesterséges intelligenciabeli alkalmazást mutat be.
+
+A programozási készség elsajátításához a legfontosabb a gyakorlás;
+rengeteg érdekes feladat található (megoldásokkal!) az alábbiakban:
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] H.~Coelho, J.~C.~Cotta, \emph{Prolog by Example---How to Learn, Teach and Use It}, Springer, 1988.
 \item[] B.~Demoen, Ph-L.~Nguyen, T.~Schrijvers, R.~Tron\c con, \emph{The First 10 Prolog Programming Contests}, Belgium, 2005.
 \end{itemize}
 Hatékony programok írásához sok hasznos és praktikus tanács-csal szolgál ez a könyv:
-\begin{itemize}
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] R.~A.~O'Keefe, \emph{The Craft of Prolog}, MIT Press, 1990.
 \end{itemize}
-Nem maradhat ki a listából Ivan Bratko klasszikusa sem,
-ami bár elsősorban mesterséges intelligenciai algoritmusokról szól, de emellett
-tartalmaz egy nagyszerű bevezetőt is a Prolog programozásba:
-\begin{itemize}
-\item[] I.~Bratko: \emph{Prolog Programming for Artificial Intelligence}, 4th Ed., Pearson, 2011.
+Végül a beépített szabályokról, fájlkezelésről és sok más hasznos
+dologról egy jó referencia az ISO szabvány informális leírása:
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
+\item[] P.~Deransart, A.~Ed-Dbali, L.~Cervoni, \emph{Prolog: The Standard}, Springer, 1996.
 \end{itemize}
-(A leckék nagy vonalakban e könyv első részének felépítését követték.)
 
 \bigskip
 \begin{center}
@@ -35,11 +37,11 @@ tartalmaz egy nagyszerű bevezetőt is a Prolog programozásba:
 Bár a Prolog nyelvhez nem kapcsolódik közvetlenül, de egy rendkívül
 olvasmányos és változatos áttekintést ad a számítástechnikáról a
 Turing Omnibus:
-\begin{itemize}
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] A.~K.~Dewdney, \emph{The (New) Turing Omnibus}, Freeman / Holt, 1993.
 \end{itemize}
 Végül pedig azoknak, akik komolyabban érdeklődnek a téma iránt, egy jó
 kiindulási pont a \emph{SICP} avagy a ,,varázslós könyv'':
-\begin{itemize}
+\begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] H.~Abelson, G.~J.~Sussman, J.~Sussman, \emph{Structure and Interpretation of Computer Programs}. MIT Press, 1996.
 \end{itemize}
