--- a/eloszo.tex
+++ b/eloszo.tex
@@ -68,6 +68,31 @@ Bizonyos rendszerekben mindez kényelmesebben is megtehető, így pl.~az
 https://swish.swi-prolog.org/} ahol a szabályok mindig automatikusan
 újraolvasódnak.
 
+\section*{Források}
+Ezt a könyvet eredetileg azzal a céllal kezdtem el, hogy az egyik
+kedvenc programozásról szóló könyvemet~[1] elérhetőbbé és köny-nyebben
+emészthetővé tegyem a magyar laikus közönség számára. Ez aztán végül
+egy Prolog tankönyvvé vált, de a leckék -- helyenként jelentősen
+átdolgozva -- az eredetit követik. Egészen pontosan az 1.~lecke az
+1.1--3 és 1.8, a 2.~lecke a 2.1--6, a 3.~lecke a 3.1--2, a 4.~lecke a
+3.3--4, az 5.~lecke az 5.1--4 és 9.1, a 6.~lecke pedig a 6.1--6 és 8.5
+fejezeteknek felel meg.
+
+Egy másik fontos forrás egy klasszikus Prolog tankönyv~[2]; ebből
+származik az 5.~lecke összefésüléses példája (11.~fejezet), a
+6.~leckében a különbség-listák tárgyalása (15.1 fejezet), és a
+lecke végén található projekt (20.2 és 21.3 fejezetek).
+
+A 7.~lecke alapját képező forráskód az \name{SWI-Prolog}
+szoftvercsomag része.
+
+\begin{itemize}[leftmargin=2cm,itemindent=-1cm,labelsep=1cm-2em]
+\item[{[1]}] I.~Bratko: \emph{Prolog Programming for Artificial
+Intelligence}, 4th Ed., Pearson, 2011.
+\item[{[2]}] L.~Sterling, E.~Shapiro, \emph{The Art of Prolog}, 2nd
+  Ed., MIT Press, 1994.
+\end{itemize}
+
 \section*{Köszönetnyilvánítás}
 Köszönettel tartozom mindenekelőtt Varga Csillának, aki lelkesen
 végigcsinálta a könyvnek egy korai változatát, és kérdéseivel
@@ -79,6 +104,3 @@ a támogatása nélkül ez a könyv nem készülhetett volna el.
   Salvi Péter\\
   Budapest, 2022.
 \end{flushright}
-
-\clearpage
-\thispagestyle{empty}
